--- a/.github/workflows/sync-specs.yml
+++ b/.github/workflows/sync-specs.yml
@@ -21,19 +21,17 @@ jobs:
 
       - name: Get changed spec files
         id: changed-files
-        run: |
-          if [ "${{ github.event_name }}" = "push" ]; then
-            echo "files=$(git diff --name-only ${{ github.event.before }}..${{ github.event.after }} -- 'specs/features/**/*.md' | tr '\n' ' ')" >> $GITHUB_OUTPUT
-          else
-            echo "files=$(git diff --name-only origin/${{ github.event.pull_request.base.ref }}..HEAD -- 'specs/features/**/*.md' | tr '\n' ' ')" >> $GITHUB_OUTPUT
-          fi
+        uses: tj-actions/changed-files@v40
+        with:
+          files: 'specs/features/**/*.md'
 
       - name: Sync specs to issues
-        if: steps.changed-files.outputs.files != ''
+        if: steps.changed-files.outputs.any_changed == 'true'
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          for file in ${{ steps.changed-files.outputs.files }}; do
+          echo "Changed files: ${{ steps.changed-files.outputs.all_changed_files }}"
+          for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
             if [ -f "$file" ]; then
               echo "Processing: $file"
 
@@ -60,9 +58,9 @@ jobs:
           done
 
       - name: Validate spec format
-        if: steps.changed-files.outputs.files != ''
+        if: steps.changed-files.outputs.any_changed == 'true'
         run: |
-          for file in ${{ steps.changed-files.outputs.files }}; do
+          for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
             if [ -f "$file" ]; then
               echo "Validating: $file"
 
