experimental: PDF image extraction implementation (Puppeteer-based)
EXPERIMENTAL CODE - NOT PRODUCTION READY

## What Works:
- ✅ Tings Electronics PDF (578KB HQ, 157KB standard images)
- ✅ Frame 7.pdf (124KB HQ, 16KB standard images)
- ✅ Puppeteer browser automation approach
- ✅ Dual resolution output (high quality + standard)
- ✅ Fallback to embedded image extraction

## What Doesn't Work:
- ❌ itssunday.studio.pdf fails with ERR_ABORTED
- ❌ ~33% failure rate on some PDF types
- ❌ Browser compatibility issues with certain PDFs

## Implementation:
- Primary: Puppeteer page-to-image conversion
- Fallback: pdf-extract-image for embedded images
- Dependencies: puppeteer, canvas, pdf-extract-image, etc.

## Files:
- src/lib/processing/image-extraction.ts (main implementation)
- test-*.mjs files (various testing approaches)
- Generated image directories and test outputs

Success rate: 2/3 PDFs tested. Not reliable enough for production.
Preserved on feature branch for future reference or improvement.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@chroma-core/openai": "^0.1.7",
     "@tailwindcss/typography": "^0.5.19",
     "@types/pdf-parse": "^1.1.5",
+    "canvas": "^3.2.0",
     "cheerio": "^1.1.2",
     "chromadb": "^3.0.17",
     "dotenv": "^16.4.7",
@@ -24,9 +25,14 @@
     "next": "^15.5.6",
     "openai": "^4.77.3",
     "p-limit": "^7.2.0",
+    "pdf-extract-image": "^0.0.3",
     "pdf-extraction": "^1.0.2",
+    "pdf-img-convert": "^2.0.0",
     "pdf-parse": "^2.4.5",
+    "pdf-to-img": "^5.0.0",
+    "pdf2pic": "^3.2.0",
     "pdfjs-dist": "^5.4.296",
+    "puppeteer": "^24.26.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
